--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
+    "@babel/plugin-syntax-import-assertions": "^7.20.0",
     "@swc/jest": "^0.2.23",
     "@tsconfig/recommended": "^1.0.1",
     "@types/jest": "^29.2.4",
@@ -38,11 +39,23 @@
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "find-up": "^6.3.0",
     "madge": "^5.0.1",
     "npm-run-path": "^5.1.0",
     "prettier": "^2.8.0",
     "putil-varhelpers": "^1.6.4",
     "rimraf": "^3.0.2",
+    "rollup": "^3.8.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-commonjs": "^24.0.0",
+    "@rollup/plugin-terser": "^0.2.1",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-alias": "^4.0.2",
+    "rollup-plugin-bundle-size": "^1.0.3",
+    "rollup-plugin-node-externals": "^5.0.3",
+    "@optimize-lodash/rollup-plugin": "^4.0.1",
     "supertest": "^6.3.2",
     "ts-cleanup": "^0.2.5",
     "ts-jest": "^29.0.3",
@@ -50,6 +63,9 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "@webpack-cli/generators": "^3.0.1"
   }
 }
