--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "compile": "tsc",
     "prebuild": "npm run check && npm run lint && npm run clean",
-    "build": "npm run build:cjs && npm run build:esm",
+    "build": "npm run build:cjs && npm run build:esm && npm run bundle",
     "build:cjs": "tsc -b tsconfig-build-cjs.json",
     "build:esm": "tsc -b tsconfig-build-esm.json",
     "postbuild": "cp README.md package.json ../../LICENSE ../../build/client && cp ../../package.cjs.json ../../build/client/cjs/package.json",
@@ -24,7 +24,7 @@
     "clean:src": "ts-cleanup -s src --all",
     "clean:dist": "rimraf ../../build/client",
     "clean:cover": "rimraf ../../coverage/client",
-    "webpack": "webpack --config webpack.config.js"
+    "bundle": "webpack"
   },
   "dependencies": {
     "@opra/common": "^0.5.0",
@@ -37,18 +37,24 @@
     "@types/lodash": "^4.14.191",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
-    "webpack": "^5.75.0"
+    "stream-browserify": "^3.0.0"
   },
   "type": "module",
   "types": "esm/index.d.ts",
   "exports": {
     ".": {
-      "require": "./cjs/index.js",
-      "default": "./esm/index.js"
-    },
-    "./cjs": "./cjs/index.js",
-    "./esm": "./esm/index.js"
+      "default": {
+        "default": "./esm/index.js",
+        "require": "./cjs/index.js"
+      },
+      "browser": {
+        "default": "./browser/opra-client.min.mjs",
+        "require": "./browser/opra-client.min.cjs"
+      }
+    }
   },
+  "main": "./umd/opra-client.umd.min.js",
+  "unpkg": "./umd/opra-client.umd.min.js",
   "engines": {
     "node": ">=18.0",
     "npm": ">=7.0.0"
@@ -57,6 +63,7 @@
     "bin/",
     "cjs/",
     "esm/",
+    "umd/",
     "LICENSE",
     "README.md"
   ],
