--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@opra/client",
+  "name": "@opra/node-client",
   "version": "0.7.0",
-  "description": "Opra internationalization package",
+  "description": "Opra NodeJS client package",
   "author": "Panates",
   "license": "MIT",
   "repository": {
@@ -15,46 +15,45 @@
     "build": "npm run build:cjs && npm run build:esm && npm run bundle",
     "build:cjs": "tsc -b tsconfig-build-cjs.json",
     "build:esm": "tsc -b tsconfig-build-esm.json",
-    "postbuild": "cp README.md package.json ../../LICENSE ../../build/client && cp ../../package.cjs.json ../../build/client/cjs/package.json",
+    "postbuild": "cp README.md package.json ../../LICENSE ../../build/node-client && cp ../../package.cjs.json ../../build/node-client/cjs/package.json",
     "lint": "eslint . --max-warnings=0",
     "check": "madge --circular src/**",
     "test": "jest --runInBand --detectOpenHandles",
     "cover": "jest --collect-coverage",
     "clean": "npm run clean:src && npm run clean:dist && npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
-    "clean:dist": "rimraf ../../build/client",
+    "clean:dist": "rimraf ../../build/node-client ../../build/client",
     "clean:cover": "rimraf ../../coverage/client",
-    "bundle": "webpack"
+    "bundle": "node support/bundle.cjs"
   },
   "dependencies": {
     "@opra/common": "^0.7.0",
     "putil-isplainobject": "^1.1.4",
-    "rxjs": "^7.6.0",
-    "ts-gems": "^2.3.0"
+    "rxjs": "^7.6.0"
   },
   "devDependencies": {
     "@types/highland": "^2.12.14",
     "@types/lodash": "^4.14.191",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
-    "stream-browserify": "^3.0.0"
+    "ts-gems": "^2.3.0",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "events": "^3.3.0",
+    "path": "^0.12.7",
+    "path-browserify": "^1.0.1",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
+    "url": "^0.11.0"
   },
   "type": "module",
   "types": "esm/index.d.ts",
   "exports": {
     ".": {
-      "default": {
-        "default": "./esm/index.js",
-        "require": "./cjs/index.js"
-      },
-      "browser": {
-        "default": "./browser/opra-client.min.mjs",
-        "require": "./browser/opra-client.min.cjs"
-      }
+      "require": "./cjs/index.js",
+      "default": "./esm/index.js"
     }
   },
-  "main": "./umd/opra-client.umd.min.js",
-  "unpkg": "./umd/opra-client.umd.min.js",
   "engines": {
     "node": ">=18.0",
     "npm": ">=7.0.0"
@@ -63,12 +62,12 @@
     "bin/",
     "cjs/",
     "esm/",
-    "umd/",
     "LICENSE",
     "README.md"
   ],
   "keywords": [
     "opra",
+    "node",
     "client",
     "http",
     "request",
