--- a/packages/common/tsconfig-build-cjs.json
+++ b/packages/common/tsconfig-build-cjs.json
@@ -6,6 +6,7 @@
     "rootDir": "src",
     "outDir": "../../build/common/cjs",
     "paths": {
+      "@opra/common": ["../../build/common"]
     },
     "sourceMap": false,
     "noEmit": false,
