--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -3,9 +3,9 @@
   "compilerOptions": {
     "moduleResolution": "Node",
     "types": ["node", "jest"],
-    "target": "ES2022",
+    "target": "ES2020",
     "lib": ["ES2020", "ES2021"],
-    "module": "ESNext",
+    "module": "ES2020",
     "declaration": true,
     "sourceMap": true,
     "noEmit": true,
