--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -24,8 +24,8 @@
     "clean:cover": "rimraf ../../coverage/angular"
   },
   "peerDependencies": {
-    "@angular/common": "^14.2.12",
-    "@angular/core": "^14.2.12",
+    "@angular/common": "^14.2.12 || 15.x.x",
+    "@angular/core": "^14.2.12 || 15.x.x",
     "@opra/client": "^0.10.0",
     "ts-gems": "^2.3.0"
   },
