--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@types/node": "^18.11.11",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
-    "antlr4ts": "^0.5.0-alpha.4",
+    "babel-jest": "^29.3.1",
+    "chalk": "^5.2.0",
     "eslint": "^8.29.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.26.0",
@@ -40,22 +41,21 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "find-up": "^6.3.0",
     "madge": "^5.0.1",
     "npm-run-path": "^5.1.0",
     "prettier": "^2.8.0",
     "putil-varhelpers": "^1.6.4",
     "rimraf": "^3.0.2",
-    "rollup": "^3.8.1",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-commonjs": "^24.0.0",
-    "@rollup/plugin-terser": "^0.2.1",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-babel": "^6.0.3",
+    "rollup": "^3.9.1",
     "@rollup/plugin-alias": "^4.0.2",
-    "rollup-plugin-bundle-size": "^1.0.3",
-    "rollup-plugin-node-externals": "^5.0.3",
-    "@optimize-lodash/rollup-plugin": "^4.0.1",
+    "@rollup/plugin-commonjs": "^24.0.0",
+    "@rollup/plugin-inject": "^5.0.3",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-strip": "^3.0.2",
+    "@rollup/plugin-terser": "^0.3.0",
+    "@rollup-extras/plugin-clean": "^1.3.4",
+    "rollup-plugin-filesize": "^9.1.2",
+    "rollup-plugin-command": "^1.1.3",
     "supertest": "^6.3.2",
     "ts-cleanup": "^0.2.5",
     "ts-jest": "^29.0.3",
@@ -66,6 +66,9 @@
     "typescript": "^4.8.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
-    "@webpack-cli/generators": "^3.0.1"
+    "@webpack-cli/generators": "^3.0.1",
+    "babel-polyfill": "^6.26.0"
+  },
+  "peerDependencies": {
   }
 }
