--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -23,19 +23,19 @@
     "clean": "npm run clean:src && npm run clean:dist && npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
     "clean:dist": "rimraf ../../build/common",
-    "clean:cover": "rimraf ../../coverage/common"
+    "clean:cover": "rimraf ../../coverage/common",
+    "antlr4": "java -jar ./tools/antlr4-4.11.2-SNAPSHOT-complete.jar -Dlanguage=TypeScript ./src/filter/antlr/OpraFilter.g4 -visitor"
   },
   "dependencies": {
-    "antlr4ts": "^0.5.0-alpha.4",
+    "antlr4": "^4.12.0-beta.3",
     "fast-tokenizer": "^1.2.0",
     "highland": "^2.13.5",
     "http-parser-js": "^0.5.8",
     "i18next": "^22.4.6",
-    "lodash": "^4.17.21",
-    "luxon": "^3.1.1",
+    "lodash.omit": "^4.5.0",
     "putil-isplainobject": "^1.1.4",
     "putil-merge": "^3.9.0",
-    "putil-promisify": "^1.8.5",
+    "putil-promisify": "^1.10.0",
     "putil-varhelpers": "^1.6.4",
     "reflect-metadata": "^0.1.13",
     "uid": "^2.0.1"
