--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,7 +33,8 @@
     "dicer": "^0.3.1",
     "express": "^4.18.2",
     "http-parser-js": "^0.5.8",
-    "lodash": "^4.17.21",
+    "lodash.isnil": "^4.0.0",
+    "lodash.omitby": "^4.6.0",
     "power-tasks": "^1.6.1",
     "putil-isplainobject": "^1.1.4",
     "putil-merge": "^3.9.0",
@@ -44,7 +45,8 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@types/dicer": "^0.2.2",
-    "@types/express": "^4.17.14"
+    "@types/express": "^4.17.14",
+    "cors": "^2.8.5"
   },
   "type": "module",
   "types": "esm/index.d.ts",
