--- a/packages/sqb/package.json
+++ b/packages/sqb/package.json
@@ -20,7 +20,7 @@
     "test": "jest",
     "cover": "jest --collect-coverage",
     "clean": "npm run clean:src && npm run clean:dist && npm run clean:cover",
-    "clean:src": "ts-cleanup -s src --all",
+    "clean:src": "ts-cleanup -s src --all && ts-cleanup -s test --all",
     "clean:dist": "rimraf ../../build/sqb",
     "clean:cover": "rimraf ../../coverage/sqb"
   },
