Implemented HttpHeaders, HttpParams Extended OpraURL params from HttpParams

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/client",
-  "version": "0.11.6",
+  "version": "0.11.8",
   "description": "Opra Client package",
   "author": "Panates",
   "license": "MIT",
@@ -38,11 +38,11 @@
     "@browsery/util": "^0.1.0",
     "buffer": "^6.0.3",
     "events": "^3.3.0",
-    "fast-tokenizer": "^1.2.0",
+    "fast-tokenizer": "^1.2.1",
     "lodash.omit": "^4.5.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
-    "rxjs": "^7.8.0",
+    "rxjs": "^7.x.x || ^8.x.x",
     "ts-lib": "^0.0.5",
     "putil-isplainobject": "^1.1.5",
     "putil-merge": "^3.10.1",
