Implemented "observe" feature in client

--- a/packages/angular/tsconfig.json
+++ b/packages/angular/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@opra/client": ["../client/src"],
+      "@opra/client": ["../node-client/src"],
       "@opra/common": ["../common/src"]
     }
   },
