--- a/packages/mongodb/package.json
+++ b/packages/mongodb/package.json
@@ -18,8 +18,8 @@
     "build:esm": "tsc -b tsconfig-build-esm.json",
     "postbuild": "cp README.md package.json ../../LICENSE ../../build/mongodb && cp ../../package.cjs.json ../../build/mongodb/cjs/package.json",
     "lint": "eslint .",
-    "test": "jest",
-    "cover": "jest --collect-coverage",
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
+    "cover": "NODE_OPTIONS=--experimental-vm-modules npx jest --collect-coverage",
     "clean": "npm run clean:src && npm run clean:dist && npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all && ts-cleanup -s test --all",
     "clean:dist": "rimraf ../../build/mongodb",
