--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -16,8 +16,8 @@
     "postbuild": "cp ../../LICENSE ../../build/angular",
     "lint": "eslint . --max-warnings=0",
     "check": "madge --circular src/**",
-    "test": "jest --runInBand --detectOpenHandles",
-    "cover": "jest --collect-coverage",
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
+    "cover": "NODE_OPTIONS=--experimental-vm-modules npx jest --collect-coverage",
     "clean": "npm run clean:src && npm run clean:dist && npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all && ts-cleanup -s test --all",
     "clean:dist": "rimraf ../../build/angular",
@@ -27,19 +27,12 @@
   "peerDependencies": {
     "@angular/common": "^14.2.12 || 15.x.x",
     "@angular/core": "^14.2.12 || 15.x.x",
-    "@opra/client": "^0.11.6",
+    "@opra/client": "^0.11.8",
     "ts-gems": "^2.3.0"
   },
   "devDependencies": {
-    "@angular/cli": "^15.1.2",
-    "@angular-devkit/build-angular": "^15.1.2",
-    "@angular/compiler": "^15.1.1",
-    "@angular/platform-browser": "^15.1.1",
-    "@angular/platform-browser-dynamic": "^15.1.1",
-    "jest-preset-angular": "^12.2.5",
     "cross-fetch": "^3.1.5",
     "core-js": "^3.27.2",
-    "ng-packagr": "^15.1.1",
     "express": "^4.18.2",
     "zone.js": "^0.12.0"
   },
