--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -42,13 +42,13 @@
     "lodash.omit": "^4.5.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
-    "rxjs": "^7.x.x || ^8.x.x",
-    "ts-lib": "^0.0.5",
     "putil-isplainobject": "^1.1.5",
     "putil-merge": "^3.10.1",
     "putil-promisify": "^1.10.0",
     "putil-varhelpers": "^1.6.5",
     "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
+    "ts-lib": "^0.0.5",
     "uid": "^2.0.1"
   },
   "devDependencies": {
