Added oprimp cli tool

--- a/packages/cli/tsconfig-build-esm.json
+++ b/packages/cli/tsconfig-build-esm.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "../../build/clit/esm",
+    "outDir": "../../build/cli/esm",
     "paths": {
       "@opra/common": ["../../build/common"],
       "@opra/node-client": ["../../build/node-client"]
