--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,7 +15,9 @@
     "build": "npm run build:cjs && npm run build:esm",
     "build:cjs": "tsc -b tsconfig-build-cjs.json",
     "build:esm": "tsc -b tsconfig-build-esm.json",
-    "postbuild": "cp README.md package.json ../../LICENSE ../../build/cli && cp ../../package.cjs.json ../../build/cli/cjs/package.json",
+    "postbuild": "npm run copy:files && npm run copy:bin",
+    "copy:files": "cp README.md package.json ../../LICENSE ../../build/cli && cp ../../package.cjs.json ../../build/cli/cjs/package.json",
+    "copy:bin": "cp -R bin ../../build/cli/bin",
     "lint": "eslint . --max-warnings=0",
     "check": "madge --circular src/**",
     "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
@@ -50,7 +52,7 @@
     "npm": ">=7.0.0"
   },
   "files": [
-    "src/bin/",
+    "bin/",
     "cjs/",
     "esm/",
     "LICENSE",
@@ -59,6 +61,7 @@
   "keywords": [
     "opra",
     "cli",
-    "tool"
+    "tool",
+    "oprimp"
   ]
 }
