--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/cli",
-  "version": "0.12.0",
+  "version": "0.13.0",
   "description": "Opra CLI tools",
   "author": "Panates",
   "license": "MIT",
@@ -28,14 +28,13 @@
     "clean:cover": "rimraf ../../coverage/client"
   },
   "dependencies": {
-    "@opra/node-client": "^0.12.0",
+    "@opra/node-client": "^0.13.0",
     "chalk": "^5.2.0",
     "commander": "^10.0.0",
     "putil-flattentext": "^2.1.1",
     "js-string-escape": "^1.0.1"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "type": "module",
   "types": "esm/index.d.ts",
   "exports": {
