--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -28,20 +28,36 @@
   },
   "dependencies": {
     "@browsery/antlr4": "^0.2.0",
+    "accepts": "^1.3.8",
+    "content-disposition": "^0.5.4",
+    "cookie": "^0.5.0",
+    "cookie-signature": "^1.0.7",
     "dayjs": "^1.11.7",
+    "encodeurl": "^1.0.2",
     "fast-tokenizer": "^1.2.2",
     "highland": "^2.13.5",
     "http-parser-js": "^0.5.8",
     "i18next": "^22.4.14",
     "lodash.omit": "^4.5.0",
+    "mime-types": "^2.1.35",
     "putil-isplainobject": "^1.1.5",
     "putil-merge": "^3.10.3",
     "putil-promisify": "^1.10.0",
     "putil-varhelpers": "^1.6.5",
     "reflect-metadata": "^0.1.13",
+    "statuses": "^2.0.1",
+    "type-is": "^1.6.18",
     "uid": "^2.0.1"
   },
   "devDependencies": {
+    "@types/accepts": "^1.3.5",
+    "@types/content-disposition": "^0.5.5",
+    "@types/cookie": "^0.5.1",
+    "@types/cookie-signature": "^1.1.0",
+    "@types/encodeurl": "^1.0.0",
+    "@types/type-is": "^1.6.3",
+    "@types/statuses": "^2.0.1",
+    "@types/mime-types": "^2.1.1",
     "ts-gems": "^2.3.0"
   },
   "type": "module",
