--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@opra/common": "^0.14.0",
+    "content-type": "^1.0.5",
     "lodash.isnil": "^4.0.0",
     "lodash.omitby": "^4.6.0",
     "power-tasks": "^1.6.4",
@@ -44,6 +45,7 @@
     "@faker-js/faker": "^7.6.0",
     "@types/dicer": "^0.2.2",
     "@types/express": "^4.17.17",
+    "@types/content-type": "^1.1.5",
     "cors": "^2.8.5",
     "ts-gems": "^2.3.0"
   },
