--- a/package.json
+++ b/package.json
@@ -31,13 +31,6 @@
     "@angular/platform-browser-dynamic": "^15.2.8",
     "@babel/eslint-parser": "^7.21.8",
     "@babel/plugin-syntax-import-assertions": "^7.20.0",
-    "@rollup-extras/plugin-clean": "^1.3.5",
-    "@rollup/plugin-alias": "^5.0.0",
-    "@rollup/plugin-commonjs": "^24.1.0",
-    "@rollup/plugin-inject": "^5.0.3",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.2",
-    "@rollup/plugin-strip": "^3.0.2",
     "@tsconfig/recommended": "^1.0.2",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.16.3",
@@ -61,15 +54,22 @@
     "prettier": "^2.8.8",
     "putil-varhelpers": "^1.6.5",
     "rimraf": "^5.0.0",
-    "rollup": "^3.21.3",
-    "rollup-plugin-command": "^1.1.3",
-    "rollup-plugin-filesize": "^10.0.0",
     "supertest": "^6.3.3",
     "ts-cleanup": "^0.2.6",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "rollup": "^3.21.3",
+    "rollup-plugin-command": "^1.1.3",
+    "rollup-plugin-filesize": "^10.0.0",
+    "@rollup-extras/plugin-clean": "^1.3.5",
+    "@rollup/plugin-alias": "^5.0.0",
+    "@rollup/plugin-commonjs": "^24.1.0",
+    "@rollup/plugin-inject": "^5.0.3",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-strip": "^3.0.2"
   }
 }
