--- a/packages/elastic/tsconfig-build-cjs.json
+++ b/packages/elastic/tsconfig-build-cjs.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "module": "CommonJS",
     "rootDir": "src",
-    "outDir": "../../build/common/cjs",
+    "outDir": "../../build/elastic/cjs",
     "noEmit": false,
   },
   "include": ["src"]
