--- a/packages/elastic/tsconfig-build-esm.json
+++ b/packages/elastic/tsconfig-build-esm.json
@@ -1,10 +1,11 @@
 {
   "extends": "../../tsconfig-build.json",
   "compilerOptions": {
-    "module": "CommonJS",
     "rootDir": "src",
-    "outDir": "../../build/common/cjs",
     "noEmit": false,
+    "outDir": "../../build/elastic/esm",
+    "declarationDir": "../../build/elastic/types",
+    "declaration": true
   },
   "include": ["src"]
 }
