--- a/packages/mongodb/tsconfig-build-cjs.json
+++ b/packages/mongodb/tsconfig-build-cjs.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig-build.json",
   "compilerOptions": {
+    "module": "CommonJS",
     "rootDir": "src",
     "outDir": "../../build/mongodb/cjs",
     "noEmit": false,
