--- a/package.json
+++ b/package.json
@@ -23,22 +23,29 @@
     "citest": "jest --passWithNoTests --detectOpenHandles --coverage --coverageReporters=lcov"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.7",
-    "@angular/cli": "^15.2.7",
+    "@angular-devkit/build-angular": "^15.2.8",
+    "@angular/cli": "^15.2.8",
     "@angular/compiler": "^15.2.8",
-    "@angular/compiler-cli": "^15.2.8",
+    "@angular/compiler-cli": "^15.2.9",
     "@angular/platform-browser": "^15.2.8",
-    "@angular/platform-browser-dynamic": "^15.2.8",
+    "@angular/platform-browser-dynamic": "^15.2.9",
     "@babel/eslint-parser": "^7.21.8",
     "@babel/plugin-syntax-import-assertions": "^7.20.0",
+    "@rollup-extras/plugin-clean": "^1.3.5",
+    "@rollup/plugin-alias": "^5.0.0",
+    "@rollup/plugin-commonjs": "^24.1.0",
+    "@rollup/plugin-inject": "^5.0.3",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-strip": "^3.0.2",
     "@tsconfig/recommended": "^1.0.2",
     "@types/jest": "^29.5.1",
-    "@types/node": "^18.16.3",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
+    "@types/node": "^20.1.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
     "babel-jest": "^29.5.0",
     "chalk": "^5.2.0",
-    "eslint": "^8.39.0",
+    "eslint": "^8.40.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-security": "^1.7.1",
@@ -46,30 +53,23 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "jest-preset-angular": "^13.0.1",
+    "jest-preset-angular": "^13.1.0",
     "madge": "^6.0.0",
-    "mongodb": "^5.3.0",
+    "mongodb": "^5.4.0",
     "ng-packagr": "^15.2.2",
     "npm-run-path": "^5.1.0",
     "prettier": "^2.8.8",
     "putil-varhelpers": "^1.6.5",
     "rimraf": "^5.0.0",
+    "rollup": "^3.21.5",
+    "rollup-plugin-command": "^1.1.3",
+    "rollup-plugin-filesize": "^10.0.0",
     "supertest": "^6.3.3",
     "ts-cleanup": "^0.2.6",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
-    "typescript": "^4.9.5",
-    "rollup": "^3.21.3",
-    "rollup-plugin-command": "^1.1.3",
-    "rollup-plugin-filesize": "^10.0.0",
-    "@rollup-extras/plugin-clean": "^1.3.5",
-    "@rollup/plugin-alias": "^5.0.0",
-    "@rollup/plugin-commonjs": "^24.1.0",
-    "@rollup/plugin-inject": "^5.0.3",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.2",
-    "@rollup/plugin-strip": "^3.0.2"
+    "typescript": "^4.9.5"
   }
 }
