--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -25,12 +25,12 @@
     "fix-json": "node ./tools/fix-dependencies.mjs"
   },
   "peerDependencies": {
-    "@angular/common": "14.x.x || 15.x.x || 16.x.x",
-    "@angular/core": "14.x.x || 15.x.x || 16.x.x",
+    "@angular/common": "15.x.x || 16.x.x",
+    "@angular/core": "15.x.x || 16.x.x",
     "@opra/client": "^0.17.1"
   },
   "devDependencies": {
-    "core-js": "^3.30.1",
+    "core-js": "^3.30.2",
     "cross-fetch": "^3.1.5",
     "express": "^4.18.2",
     "ts-gems": "^2.3.0",
