--- a/packages/elastic/package.json
+++ b/packages/elastic/package.json
@@ -28,14 +28,14 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.6.0",
     "@elastic/elasticsearch": "^8.7.0",
+    "@faker-js/faker": "^7.6.0",
     "ts-gems": "^2.3.0"
   },
   "peerDependencies": {
+    "@elastic/elasticsearch": ">=8.7.0",
     "@opra/common": "^0.17.1",
-    "@opra/core": "^0.17.1",
-    "@elastic/elasticsearch": ">=8.7.0"
+    "@opra/core": "^0.17.1"
   },
   "type": "module",
   "types": "types/index.d.ts",
