Fixes and improvements

--- a/packages/angular/tsconfig.json
+++ b/packages/angular/tsconfig.json
@@ -1,10 +1,4 @@
 {
   "extends": "../../tsconfig-base.json",
-  "include": ["src", "test"],
-  "compilerOptions": {
-    "baseUrl": "./",
-    "paths": {
-      "@opra/client": ["../../build/client"]
-    }
-  }
+  "include": ["src", "test"]
 }
