--- a/packages/elastic/tsconfig-build-esm.json
+++ b/packages/elastic/tsconfig-build-esm.json
@@ -7,5 +7,7 @@
     "declarationDir": "../../build/elastic/types",
     "declaration": true
   },
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
