--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -30,21 +30,21 @@
       "#/*": ["./*"],
       "@opra/angular": ["./packages/angular/src"],
       "@opra/angular/*": ["./packages/angular/src/*"],
+      "@opra/client": ["./packages/client/src"],
+      "@opra/client/*": ["./packages/client/src/*"],
       "@opra/core": ["./packages/core/src"],
       "@opra/core/test": ["./packages/core/test"],
       "@opra/core/*": ["./packages/core/src/*"],
       "@opra/common": ["./packages/common/src"],
       "@opra/common/test": ["./packages/common/test"],
       "@opra/common/*": ["./packages/common/src/*"],
+      "@opra/elastic": ["./packages/elastic/src"],
+      "@opra/elastic/*": ["./packages/elastic/src/*"],
+      "@opra/mongodb": ["./packages/mongodb/src"],
+      "@opra/mongodb/*": ["./packages/mongodb/src/*"],
       "@opra/sqb": ["./packages/sqb/src"],
       "@opra/sqb/test": ["./packages/sqb/test"],
       "@opra/sqb/*": ["./packages/sqb/src/*"],
-      "@opra/mongodb": ["./packages/mongodb/src"],
-      "@opra/mongodb/*": ["./packages/mongodb/src/*"],
-      "@opra/elastic": ["./packages/elastic/src"],
-      "@opra/elastic/*": ["./packages/elastic/src/*"],
-      "@opra/node-client": ["./packages/node-client/src"],
-      "@opra/node-client/*": ["./packages/node-client/src/*"],
       "@opra/nestjs": ["./packages/nestjs/src"],
       "@opra/nestjs/*": ["./packages/nestjs/src/*"],
       "@opra/testing": ["./packages/testing/src"],
