--- a/examples/customer-app/package.json
+++ b/examples/customer-app/package.json
@@ -1,3 +1,6 @@
 {
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "start": "node --experimental-specifier-resolution=node --loader ../../support/esloader.mjs index.ts"
+  }
 }
