--- a/examples/customer-app/tsconfig.json
+++ b/examples/customer-app/tsconfig.json
@@ -3,8 +3,8 @@
   "include": ["**/*.ts"],
   "ts-node": {
     "compilerOptions": {
-      "target": "ESNext",
-      "module": "ES2022"
+      "target": "ES2020",
+      "module": "ES2020"
     }
   }
 }
