--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "prettier": "^2.8.8",
     "putil-varhelpers": "^1.6.5",
     "rimraf": "^5.0.0",
+    "esbuild": "^0.17.18",
     "rollup": "^3.21.5",
     "rollup-plugin-command": "^1.1.3",
     "rollup-plugin-filesize": "^10.0.0",
