--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,13 +10,27 @@
     "directory": "packages/client"
   },
   "scripts": {
-    "prebuild": "npm run clean",
-    "build": "rollup -c rollup.config.mjs",
-    "clean": "rimraf ../../build/client"
+    "compile": "tsc",
+    "prebuild": "npm run check && npm run lint && npm run clean",
+    "build": "npm run build:cjs && npm run build:esm",
+    "build:cjs": "tsc -b tsconfig-build-cjs.json",
+    "build:esm": "tsc -b tsconfig-build-esm.json",
+    "build:browser": "node esbuild.mjs",
+    "postbuild": "cp README.md package.json ../../LICENSE ../../build/client && cp ../../package.cjs.json ../../build/client/cjs/package.json",
+    "lint": "eslint . --max-warnings=0",
+    "check": "madge --circular src/**",
+    "test": "jest",
+    "cover": "jest --collect-coverage",
+    "clean": "npm run clean:src && npm run clean:dist && npm run clean:cover",
+    "clean:src": "ts-cleanup -s src --all",
+    "clean:dist": "rimraf ../../build/client",
+    "clean:cover": "rimraf ../../coverage/client"
+
   },
   "type": "module",
-  "module": "./esm/index.min.mjs",
-  "main": "./cjs/index.min.cjs",
+  "module": "./esm/index.mjs",
+  "main": "./cjs/index.cjs",
+  "browser": "./browser.js",
   "types": "./types/index.d.ts",
   "typings": "./types/index.d.ts",
   "exports": {
@@ -24,18 +38,20 @@
       "default": "./package.json"
     },
     ".": {
-      "require": "./cjs/index.min.cjs",
-      "default": "./esm/index.min.mjs"
+      "require": "./cjs/index.js",
+      "default": "./esm/index.js",
+      "browser": "./browser.js"
     }
   },
   "dependencies": {
     "@browsery/antlr4": "^0.3.0",
     "@browsery/fs": "^0.3.0",
     "@browsery/highland": "^0.3.0",
-    "@browsery/http-parser": "^0.3.0",
+    "@browsery/http-parser": "^0.3.2",
     "@browsery/i18next": "^0.3.0",
     "@browsery/stream": "^0.3.0",
     "@browsery/util": "^0.3.0",
+    "@opra/common": "^0.17.1",
     "accepts": "^1.3.8",
     "buffer": "^6.0.3",
     "cookie": "^0.5.0",
@@ -58,7 +74,6 @@
     "uid": "^2.0.1"
   },
   "devDependencies": {
-    "@opra/node-client": "^0.17.1"
   },
   "sideEffects": false,
   "files": [
