--- a/packages/client/tsconfig-build-cjs.json
+++ b/packages/client/tsconfig-build-cjs.json
@@ -1,11 +1,10 @@
 {
   "extends": "../../tsconfig-build.json",
   "compilerOptions": {
+    "module": "CommonJS",
     "rootDir": "src",
+    "outDir": "../../build/client/cjs",
     "noEmit": false,
-    "outDir": "../../build/node-client/esm",
-    "declarationDir": "../../build/node-client/types",
-    "declaration": true
   },
   "include": ["src"]
 }
