--- a/packages/client/tsconfig-build-esm.json
+++ b/packages/client/tsconfig-build-esm.json
@@ -1,10 +1,11 @@
 {
   "extends": "../../tsconfig-build.json",
   "compilerOptions": {
-    "module": "CommonJS",
     "rootDir": "src",
-    "outDir": "../../build/node-client/cjs",
     "noEmit": false,
+    "outDir": "../../build/client/esm",
+    "declarationDir": "../../build/client/types",
+    "declaration": true
   },
   "include": ["src"]
 }
