--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -9,12 +9,26 @@
     "url": "https://github.com/panates/opra.git",
     "directory": "packages/common"
   },
+  "type": "module",
+  "module": "./esm/index.mjs",
+  "main": "./cjs/index.cjs",
+  "browser": "./browser.js",
+  "types": "./types/index.d.ts",
+  "typings": "./types/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./cjs/index.js",
+      "default": "./esm/index.js",
+      "browser": "./browser.js"
+    }
+  },
   "scripts": {
     "compile": "tsc",
     "prebuild": "npm run check && npm run lint && npm run clean",
-    "build": "npm run build:cjs && npm run build:esm",
+    "build": "npm run build:cjs && npm run build:esm && npm run build:browser",
     "build:cjs": "tsc -b tsconfig-build-cjs.json",
     "build:esm": "tsc -b tsconfig-build-esm.json",
+    "build:browser": "node esbuild.mjs",
     "postbuild": "cp package.json ../../LICENSE ../../build/common && cp ../../package.cjs.json ../../build/common/cjs/package.json",
     "lint": "eslint . --max-warnings=0",
     "check": "madge --circular src/**",
@@ -28,6 +42,9 @@
   },
   "dependencies": {
     "@browsery/antlr4": "^0.5.0",
+    "@browsery/highland": "^0.3.0",
+    "@browsery/http-parser": "^0.3.2",
+    "@browsery/i18next": "^0.4.0",
     "accepts": "^1.3.8",
     "content-disposition": "^0.5.4",
     "cookie": "^0.5.0",
@@ -35,9 +52,6 @@
     "dayjs": "^1.11.7",
     "encodeurl": "^1.0.2",
     "fast-tokenizer": "^1.2.2",
-    "highland": "^2.13.5",
-    "http-parser-js": "^0.5.8",
-    "i18next": "^22.4.15",
     "lodash.omit": "^4.5.0",
     "mime-types": "^2.1.35",
     "putil-isplainobject": "^1.1.5",
@@ -56,15 +70,12 @@
     "@types/encodeurl": "^1.0.0",
     "@types/mime-types": "^2.1.1",
     "@types/type-is": "^1.6.3",
-    "ts-gems": "^2.3.0"
-  },
-  "type": "module",
-  "types": "types/index.d.ts",
-  "exports": {
-    ".": {
-      "require": "./cjs/index.js",
-      "default": "./esm/index.js"
-    }
+    "@browsery/fs": "^0.3.0",
+    "@browsery/stream": "^0.3.0",
+    "@browsery/util": "^0.3.0",
+    "crypto-browserify": "^3.12.0",
+    "path-browserify": "^1.0.1",
+    "ts-gems": "^2.4.0"
   },
   "engines": {
     "node": ">=16.0",
@@ -77,7 +88,8 @@
     "umd/",
     "types/",
     "LICENSE",
-    "README.md"
+    "README.md",
+    "browser.js"
   ],
   "keywords": [
     "opra",
