--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/client",
-  "version": "0.17.1",
+  "version": "0.17.2",
   "description": "Opra Client package",
   "author": "Panates",
   "license": "MIT",
@@ -25,7 +25,6 @@
     "clean:src": "ts-cleanup -s src --all",
     "clean:dist": "rimraf ../../build/client",
     "clean:cover": "rimraf ../../coverage/client"
-
   },
   "type": "module",
   "module": "./esm/index.mjs",
@@ -51,7 +50,7 @@
     "@browsery/i18next": "^0.3.0",
     "@browsery/stream": "^0.3.0",
     "@browsery/util": "^0.3.0",
-    "@opra/common": "^0.17.1",
+    "@opra/common": "^0.17.2",
     "accepts": "^1.3.8",
     "buffer": "^6.0.3",
     "cookie": "^0.5.0",
@@ -73,8 +72,7 @@
     "type-is": "^1.6.18",
     "uid": "^2.0.1"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "sideEffects": false,
   "files": [
     "cjs/",
