--- a/packages/elastic/package.json
+++ b/packages/elastic/package.json
@@ -12,11 +12,11 @@
   "scripts": {
     "compile": "tsc",
     "prebuild": "npm run lint && npm run clean",
-    "_build": "npm run build:cjs && npm run build:esm",
-    "_build:cjs": "tsc -b tsconfig-build-cjs.json",
-    "_build:esm": "tsc -b tsconfig-build-esm.json",
-    "_postbuild": "cp README.md package.json ../../LICENSE ../../build/elastic && cp ../../package.cjs.json ../../build/elastic/cjs/package.json",
-    "lint": "eslint . --max-warnings=",
+    "build": "npm run build:cjs && npm run build:esm",
+    "build:cjs": "tsc -b tsconfig-build-cjs.json",
+    "build:esm": "tsc -b tsconfig-build-esm.json",
+    "postbuild": "cp README.md package.json ../../LICENSE ../../build/elastic && cp ../../package.cjs.json ../../build/elastic/cjs/package.json",
+    "lint": "eslint . --max-warnings=0",
     "test": "jest",
     "cover": "jest --collect-coverage",
     "clean": "npm run clean:src && npm run clean:dist && npm run clean:cover",
