Fixed build error

--- a/packages/angular/tsconfig.lib.json
+++ b/packages/angular/tsconfig.lib.json
@@ -28,6 +28,7 @@
   "angularCompilerOptions": {
     "compilationMode": "partial",
     "strictTemplates": true,
-    "enableResourceInlining": true
+    "enableResourceInlining": true,
+    "incremental": true
   }
 }
