Optimized browser compability

--- a/packages/angular/angular.json
+++ b/packages/angular/angular.json
@@ -22,7 +22,7 @@
               "tsConfig": "./tsconfig.lib.json"
             }
           },
-          "defaultConfiguration": "production"
+          "defaultConfiguration": "development"
         },
         "test": {
           "builder": "@angular-devkit/build-angular:jest",
