--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@opra/common",
   "version": "0.19.0",
-  "description": "Opra internationalization package",
+  "description": "Opra common package",
   "author": "Panates",
   "license": "MIT",
   "repository": {
@@ -41,42 +41,27 @@
     "antlr4": "java -jar ./tools/antlr4-4.12.1-SNAPSHOT-complete.jar -Dlanguage=TypeScript ./src/filter/antlr/OpraFilter.g4 -visitor"
   },
   "dependencies": {
-    "@browsery/antlr4": "^0.7.0",
-    "@browsery/highland": "^0.4.0",
+    "@browsery/antlr4": "^0.8.0",
+    "@browsery/highland": "^0.5.0",
     "@browsery/http-parser": "^0.4.0",
-    "@browsery/i18next": "^0.5.0",
-    "accepts": "^1.3.8",
-    "content-disposition": "^0.5.4",
-    "cookie": "^0.5.0",
-    "cookie-signature": "^1.2.1",
-    "dayjs": "^1.11.8",
-    "encodeurl": "^1.0.2",
+    "@browsery/i18next": "^0.6.0",
     "fast-tokenizer": "^1.2.2",
-    "fastest-validator": "^1.17.0",
     "lodash.omit": "^4.5.0",
-    "mime-types": "^2.1.35",
+    "path-browserify": "^1.0.1",
     "putil-isplainobject": "^1.1.5",
     "putil-merge": "^3.10.3",
     "putil-promisify": "^1.10.0",
     "putil-varhelpers": "^1.6.5",
     "reflect-metadata": "^0.1.13",
-    "type-is": "^1.6.18",
     "uid": "^2.0.1",
     "valgen": "^4.0.0-alpha.5"
   },
   "devDependencies": {
     "@browsery/fs": "^0.4.0",
-    "@browsery/stream": "^0.4.0",
+    "@browsery/stream": "^0.5.0",
     "@browsery/util": "^0.4.0",
-    "@types/accepts": "^1.3.5",
-    "@types/content-disposition": "^0.5.5",
-    "@types/cookie": "^0.5.1",
-    "@types/cookie-signature": "^1.1.0",
     "@types/encodeurl": "^1.0.0",
-    "@types/mime-types": "^2.1.1",
-    "@types/type-is": "^1.6.3",
-    "crypto-browserify": "^3.12.0",
-    "path-browserify": "^1.0.1",
+    "@types/validator": "^13.7.17",
     "ts-gems": "^2.4.0"
   },
   "engines": {
