--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,14 +28,19 @@
   },
   "dependencies": {
     "@opra/common": "^0.19.0",
+    "accepts": "^1.3.8",
+    "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
+    "cookie": "^0.5.0",
     "lodash.isnil": "^4.0.0",
     "lodash.omitby": "^4.6.0",
+    "mime-types": "^2.1.35",
     "power-tasks": "^1.7.0",
     "putil-isplainobject": "^1.1.5",
     "putil-merge": "^3.10.3",
     "putil-varhelpers": "^1.6.5",
-    "strict-typed-events": "^2.3.1"
+    "strict-typed-events": "^2.3.1",
+    "type-is": "^1.6.18"
   },
   "peerDependencies": {
     "body-parser": "^1.20.2",
@@ -43,10 +48,17 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
+    "@types/accepts": "^1.3.5",
+    "@types/content-disposition": "^0.5.5",
     "@types/content-type": "^1.1.5",
+    "@types/cookie": "^0.5.1",
     "@types/dicer": "^0.2.2",
     "@types/express": "^4.17.17",
+    "@types/mime-types": "^2.1.1",
+    "@types/type-is": "^1.6.3",
     "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
+    "path-browserify": "^1.0.1",
     "ts-gems": "^2.4.0"
   },
   "type": "module",
