--- a/examples/customer-app/package.json
+++ b/examples/customer-app/package.json
@@ -2,5 +2,11 @@
   "type": "module",
   "scripts": {
     "start": "node --experimental-specifier-resolution=node --loader ../../support/esloader.mjs index.ts"
+  },
+  "dependencies": {
+    "@opra/sqb": "*",
+    "@sqb/connect": "^4.9.0",
+    "@sqb/postgres": "^4.9.0",
+    "@faker-js/faker": "^8.0.2"
   }
 }
