--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,21 +29,22 @@
   "dependencies": {
     "@opra/common": "^0.20.3",
     "accepts": "^1.3.8",
+    "cookie": "^0.5.0",
+    "cookie-signature": "^1.2.1",
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
-    "cookie": "^0.5.0",
-    "lodash.isnil": "^4.0.0",
-    "lodash.omitby": "^4.6.0",
+    "encodeurl": "^1.0.2",
+    "fresh": "^0.5.2",
+    "formidable": "^3.5.0",
     "mime-types": "^2.1.35",
     "power-tasks": "^1.7.0",
-    "putil-isplainobject": "^1.1.5",
-    "putil-merge": "^3.10.3",
     "putil-varhelpers": "^1.6.5",
+    "range-parser": "^1.2.1",
     "strict-typed-events": "^2.3.1",
-    "type-is": "^1.6.18"
+    "type-is": "^1.6.18",
+    "vary": "^1.1.2"
   },
   "peerDependencies": {
-    "body-parser": "^1.20.2",
     "express": "^4.x.x || ^5.x.x"
   },
   "devDependencies": {
@@ -52,11 +53,15 @@
     "@types/content-disposition": "^0.5.5",
     "@types/content-type": "^1.1.5",
     "@types/cookie": "^0.5.1",
-    "@types/dicer": "^0.2.2",
+    "@types/cookie-signature": "^1.1.0",
+    "@types/encodeurl": "^1.0.0",
+    "@types/fresh": "^0.5.0",
+    "@types/formidable": "^3.4.0",
     "@types/express": "^4.17.17",
     "@types/mime-types": "^2.1.1",
+    "@types/range-parser": "^1.2.4",
     "@types/type-is": "^1.6.3",
-    "cors": "^2.8.5",
+    "@types/vary": "^1.1.0",
     "crypto-browserify": "^3.12.0",
     "path-browserify": "^1.0.1",
     "ts-gems": "^2.4.0"
@@ -88,11 +93,10 @@
     "opra",
     "rest",
     "api",
-    "oas",
-    "open",
-    "swagger",
-    "raml",
+    "openapi",
     "http",
-    "web"
+    "web",
+    "swagger",
+    "raml"
   ]
 }
