--- a/examples/customer-app/package.json
+++ b/examples/customer-app/package.json
@@ -4,7 +4,7 @@
     "start": "node --experimental-specifier-resolution=node --loader ../../support/esloader.mjs index.ts"
   },
   "dependencies": {
-    "@opra/sqb": "*",
+    "@opra/sqb": "^0.21.0",
     "@sqb/connect": "^4.9.0",
     "@sqb/postgres": "^4.9.0",
     "@faker-js/faker": "^8.0.2"
